--- a/src/main/resources/templates/user/order.html
+++ b/src/main/resources/templates/user/order.html
@@ -5,16 +5,6 @@
 
 <th:block layout:fragment="head">
     <title>HONG SHOP</title>
-    <style>
-        th, td {
-            text-align: center;
-            vertical-align: middle;
-        }
-
-        tr {
-            text-align: center;
-        }
-    </style>
 </th:block>
 
 <th:block layout:fragment="content">
@@ -28,82 +18,7 @@
             </div>
         </div>
         <div class="card-body">
-            <table class="table table-bordered" id="cart-table">
-                <thead>
-                    <tr>
-                        <th style="width: 5%" rowspan="2">번호</th>
-                        <th style="width: 5%" rowspan="2">주문상태</th>
-                        <th style="width: 10%" rowspan="2">주문날짜</th>
-                        <th style="width: 10%" COLSPAN="3">주문상세정보</th>
-                        <th style="width: 5%" rowspan="2">쿠폰 <br/> 사용여부</th>
-                        <th style="width: 10%" rowspan="2">전체 가격</th>
-                        <th style="width: 1%" rowspan="2"></th>
-                        <th style="width: 5%" rowspan="2">배송상태</th>
-                        <th style="width: 10%" COLSPAN="3">주소</th>
-                        <th style="width: 5%" rowspan="2">배송지 <br/> 변경하기</th>
-                    </tr>
-                    <tr>
-                        <th>상품명</th>
-                        <th>주문개수</th>
-                        <th>총가격</th>
-                        <th>시/도</th>
-                        <th>시군구/ <br/> 읍면동</th>
-                        <th>우편번호</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <th:block th:if="${orders.size() == 0}">
-                    <tr>
-                        <td colspan="14">주문 및 배송 정보가 비어있습니다.</td>
-                    </tr>
-                </th:block>
-                <th:block th:unless="${orders.size() == 0}">
-                    <th:block  th:each="order, orderStat : ${orders}">
-                        <tr>
-                            <td th:text="${orderStat.index + 1}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.orderStatStr}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${#strings.substring(order.orderDate, 0, 10)}" style="width: 10%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.orderDetails.get(0).productName}" style="width: 10%"></td>
-                            <td th:text="|${order.orderDetails.get(0).orderCnt} 개|" style="width: 5%"></td>
-                            <td th:text="|${#numbers.formatInteger(order.orderDetails.get(0).orderPrice, 0, 'COMMA')} 원|" style="width: 10%"></td>
-                            <th:block th:if="${order.useCoupon}">
-                                <td th:rowspan="${order.orderDetails.size()}" style="width: 5%">
-                                    <span>사용</span>
-                                    <br />
-                                    <span th:text="|${#numbers.formatInteger(order.couponRate, 0, 'COMMA')} 원|"></span>
-                                </td>
-                            </th:block>
-                            <th:block th:unless="${order.useCoupon}">
-                                <td th:rowspan="${order.orderDetails.size()}" style="width: 5%">미사용</td>
-                            </th:block>
-                            <td style="width: 10%" th:rowspan="${order.orderDetails.size()}">
-                                <b th:text="|${#numbers.formatInteger(totalPrice.get(orderStat.index), 0, 'COMMA')} 원|"></b>
-                            </td>
-                            <td style="width: 1%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.deliverStatStr}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.address.city}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.address.street}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td th:text="${order.address.zipcode}" style="width: 5%" th:rowspan="${order.orderDetails.size()}"></td>
-                            <td style="width: 5%" th:rowspan="${order.orderDetails.size()}">
-                                <button type="button" class="btn btn-outline-primary chg-address" th:data-deliver="${order.deliverId}" th:data-order="${order.orderId}" th:data-city="${order.address.city}" th:data-status="${order.deliverStatus}"
-                                        th:data-street="${order.address.street}" th:data-zipcode="${order.address.zipcode}" th:text="${(order.deliverStatus.equals('DELIVERED')) ? '리뷰작성' : '변경'}"></button>
-                            </td>
-                        </tr>
-                        <th:block th:if="${order.orderDetails.size() > 1}">
-                            <th:block th:each="detail, detailStat : ${order.orderDetails}">
-                                <th:block th:unless="${detailStat.first}">
-                                    <tr>
-                                        <td th:text="${detail.productName}" style="width: 10%"></td>
-                                        <td th:text="|${detail.orderCnt} 개|" style="width: 5%"></td>
-                                        <td th:text="|${#numbers.formatInteger(detail.orderPrice, 0, 'COMMA')} 원|" style="width: 10%"></td>
-                                    </tr>
-                                </th:block>
-                            </th:block>
-                        </th:block>
-                    </th:block>
-                </th:block>
-                </tbody>
-            </table>
+            <div id="order-table-div"></div>
         </div>
 
         <!-- s: change Address Modal -->
@@ -234,16 +149,46 @@
         </form>
         <!-- s: review write Modal -->
 
+
+        <!-- s: orderDetailModal -->
+        <div class="modal modal-lg" id="order-detail-modal">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">주문 상세 정보</h4>
+                        <button type="button" class="btn-close" id="close-order-detail-modal-btn" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <div id="order-detail-table-div"></div>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-danger" id="cancel-order-detail-btn" data-bs-dismiss="modal">닫기</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- e: orderDetailModal -->
+
     </div>
 </th:block>
 
 
 <th:block layout:fragment="script">
     <script th:inline="javascript">
-        const orderAndDeliver = /*[[${orders}]]*/ [];
-        const id = /*[[${id}]]*/ null;
-        const totalPrice = /*[[${totalPrice}]]*/[];
         const uploadFile = new File("upload-container")
+
+        let table = new Table("order-table-div")
+        let orderDetailTable = new Table("order-detail-table-div")
+
+        const addressForm = $("#city, #street, #zipcode")
+
     </script>
     <script th:src="@{'/assets/js/page/user/order.js'}"></script>
 </th:block>
