--- a/src/main/resources/templates/user/myInfo.html
+++ b/src/main/resources/templates/user/myInfo.html
@@ -60,20 +60,7 @@
 
                 <div class="mb-3 mt-3">
                     <label>유저 권한</label>
-                    <div class="input-group">
-                        <div class="form-check" style="margin-right: 20px;">
-                            <input type="radio" class="form-check-input" id="ROLE_ADMIN" name="role" value="ROLE_ADMIN" th:checked="${user.role == 'ROLE_ADMIN'}" disabled>
-                            <label class="form-check-label" for="ROLE_ADMIN">admin</label>
-                        </div>
-                        <div class="form-check" style="margin-right: 20px;">
-                            <input type="radio" class="form-check-input" id="ROLE_USER" name="role" value="ROLE_USER" th:checked="${user.role == 'ROLE_USER'}" disabled>
-                            <label class="form-check-label" for="ROLE_USER">user</label>
-                        </div>
-                        <div class="form-check">
-                            <input type="radio" class="form-check-input" id="ROLE_SUPER" name="role" value="ROLE_SUPER" th:checked="${user.role == 'ROLE_SUPER'}" disabled>
-                            <label class="form-check-label" for="ROLE_SUPER">SUPER</label>
-                        </div>
-                    </div>
+                    <input type="text" class="form-control" id="role" name="userId" th:value="${user.role}" disabled/>
                 </div>
 
                 <div class="row">
